--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,49 +5,56 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:background="@color/white"
+    android:background="#F1FADA"
     tools:context=".fragments.HomeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:background="@color/white"
+        android:background="#9AC8CD"
+        android:alpha="0.9"
         android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/homeInput"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_gravity="center"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/recyclerView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="15"
-            android:hint="Thinking ?"
-            android:inputType="textMultiLine"
-            android:textColor="@color/black"
-            android:textColorHighlight="@color/black"
-            android:textColorHint="@color/material_dynamic_tertiary60"
-            app:layout_constraintEnd_toStartOf="@+id/addButton"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:background="#F1FADA"
+            android:alpha="0.85"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/homeInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#F1FADA"
+                android:ems="15"
+                android:hint="Thinking ?"
+                android:layout_weight="8"
+                android:inputType="textMultiLine"
+                android:padding="15dp"
+                android:textColor="#265073"
+                android:textColorHint="#265073" />
 
-        <ImageView
-            android:id="@+id/addButton"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_toEndOf="@id/homeInput"
-            android:src="@drawable/baseline_add_24"
-            app:layout_constraintBottom_toBottomOf="@+id/homeInput"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="@+id/homeInput" />
+            <ImageView
+                android:id="@+id/addButton"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="#F1FADA"
+                android:layout_gravity="bottom"
+                android:src="@drawable/baseline_add_24" />
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="0dp"
-            android:layout_marginTop="15dp"
             android:layout_height="0dp"
-            android:background="#FFF2E1"
+            android:background="#F1FADA"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/homeInput" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
